--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -21,7 +21,7 @@
   clear: both;
 }
 
-#masthead {
+#masthead, header {
   background: #fff; 
   margin: 0 0 40px;
   z-index: 99;
@@ -92,7 +92,7 @@ color: black;
 
   width: 75%;
   height: 75%;
-  border: 2px, black;
+  border: 2px, solid black;
   padding: 100px;
 }
 
@@ -109,7 +109,7 @@ footer {
   color: #ccc;
   text-align: center;
   font-size: 12px;
-  opacity: 0.9; 
+  opacity: 0.75; 
 }
 
 /* order */
@@ -119,14 +119,25 @@ footer {
   color: white;
 }
 
-.car-title {
+.card-title {
   font-size: 50px;
 }
 
-.card-body {
+#card-body {
+  width: 100%;
+  border: 2px solid black;
+  padding: 25px;
+  background-color: #f5fafa;
+  margin-bottom: 50px;
+}
+
+#card {
+  width: 100%;
+  border: 2px solid black;
+  padding: 25px;
   text-align: center;
   background-color: #698a8a;
-  margin-top: 60px;
+  margin-top: 75px;
   margin-bottom: 100px;
   color: white;
 }
@@ -137,4 +148,31 @@ footer {
 
 .input-group-prepend {
   background-color: white;
+}
+
+/* manager */
+
+#create {
+  width: 50%;
+  border: 2px solid black;
+  padding: 25px;
+  margin-top: 100px;
+  margin-right: 50%;
+  clear: left;
+  float: left;
+  background: #698a8a;
+ 
+
+}
+
+#current {
+  width: 50%;
+  border: 2px solid black;
+  padding: 25px;
+  margin-top: 100px;
+  margin-left: 50%;
+  margin-bottom: 300px;
+  float: right;
+  clear: right;
+  background: #698a8a;
 }
