--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -98,24 +98,20 @@ color: black;
 
 footer {
   position: relative;
-  padding: 20px 0;
+  padding: 25px 0;
   background: #698a8a;
   color: #fff;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
   height: 100px;
   clear: both;
-  color: #ccc;
   text-align: center;
-  font-size: 12px;
+  font-size: 15px;
   opacity: 0.75; 
 }
 
 /* order */
 
 .card-text {
-  margin-top: 30px;
+  margin-top: 10px;
   color: white;
 }
 
@@ -152,27 +148,43 @@ footer {
 
 /* manager */
 
+.row {
+  width: 100%;
+  margin: 0 auto;
+}
+
 #create {
-  width: 50%;
+  width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin-top: 100px;
-  margin-right: 50%;
+  margin: 100px 30px 300px 50px;
   clear: left;
   float: left;
   background: #698a8a;
+  color: white;
  
 
 }
 
 #current {
-  width: 50%;
+  width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin-top: 100px;
-  margin-left: 50%;
-  margin-bottom: 300px;
+  margin: 100px 50px 300px 50px;
   float: right;
   clear: right;
   background: #698a8a;
+  color: white;
+}
+
+#button {
+  background-color: white; 
+  border: none;
+  color: rgb(66, 66, 66);
+  padding: 10px 20px;
+  text-align: center;
+  display: inline-block;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 5px;
 }
