--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -96,7 +96,7 @@ color: black;
   padding: 100px;
 }
 
-footer {
+.footer {
   position: relative;
   padding: 25px 0;
   background: #698a8a;
@@ -115,9 +115,9 @@ footer {
   color: white;
 }
 
-.card-title {
+/*.card-title {
   font-size: 50px;
-}
+}*/
 
 #card-body {
   width: 100%;
@@ -131,7 +131,7 @@ footer {
   width: 100%;
   border: 2px solid black;
   padding: 25px;
-  text-align: center;
+  text-align: none;
   background-color: #698a8a;
   margin-top: 75px;
   margin-bottom: 100px;
