Manager Page working minus new login

--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -54,7 +54,7 @@
               </div>
 
               <div class="col-lg-6">
-                  <form id="create" name="UpdateProduct" height='250' data-product-id=1>
+                  <form id="UpdateProduct" height='250' data-product-id=1>
                     <h2><button id="prevProd" class="btn disabled" type="button"><</button>Update Current Product<button id="nextProd" type="button" class="btn">></button></h2>
                     <div class="form-group">
                         <label for="productUpdateName" class="sc-only">ProductName</label>
