--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -22,7 +22,7 @@
   </div>  
     <div class="jumbotron text-center">
       <div class="container">
-        <h2>Welcome to Dime Platform</h2>
+        <h2>Welcome to Dime</h2>
       <hr />
       <h3 class="h3 mb-3 font-weight-normal">Please sign in</h3>
       <form class="form-horizonal" id="signin" name="signin" method="POST" action="signin">
