--- a/views/charts.hbs
+++ b/views/charts.hbs
@@ -9,7 +9,9 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="./jumbotron-narrow.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
+  <!--  <link href="./jumbotron-narrow.css" rel="stylesheet">-->
+    <link href="assets/css/stickyfooter.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   </head>
   <body>
@@ -25,9 +27,9 @@
             <li role="presentation"><a href="/signin">LogOut</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
-      <div class="container">
+      <div class="container" id="charts">
           <div class=""
       </div>
       <div class="container">
