--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -9,7 +9,10 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
+   <link href="assets/css/styles.css" rel="stylesheet">
+   <link href="assets/css/stickyfooter.css" rel="stylesheet">
+    <link rel="../assets/css/styles.css" rel="stylesheet" type="text/css">
+  <!--  <link href="../public/assets/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
   </head>
   <body>
     <div class="container">
@@ -24,42 +27,41 @@
             <li role="presentation" ><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
 
       <div class="jumbotron">
-        <h1 class="text-center">Welcome to Dime Platform</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h1 class="text-center">Welcome to Dime</h1>
+        <p class="lead">Dime is an easy to use business process model that helps a company manage orders, invoices, products and track data. With its easy to use features Dime is a powerful tool for any type of company. Dime makes is fast an easy for you to run your business and gives you the freedom to run it how you would like</p>
       </div>
 
       <div class="row marketing">
-        <div class="col-lg-3">
-          <h4>Subheading</h4>
+        <div class="col-lg-3" id="category">
+          <h4>Orders</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
         </div>
 		<div class="col-lg-3">
-          <h4>Subheading</h4>
+          <h4>Invoice</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
         </div>
 		<div class="col-lg-3">
-          <h4>Subheading</h4>
+          <h4>Manager</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
         </div>
 
         <div class="col-lg-3">
-          <h4>Subheading</h4>
+          <h4>Charts</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
         </div>
       </div>
-
+</div>
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
-
-    </div>    
+    
   </body>
 </html>
