--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -9,7 +9,9 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/stickyfooter.css" rel="stylesheet">
+  <!--  <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
   </head>
   <body>
     <div class="container">
@@ -24,15 +26,16 @@
             <li role="presentation"><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
 
-      <div class="jumbotron">
+  <!--    <div class="jumbotron">
         <h1 class="text-center">Welcome to Dime Platform</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      </div>
-
-        <form id="create" name="invoice" height='250'>
+        <p class="lead"></p>
+      </div> -->
+<div class="container">
+    <div id="card" class="card-body" id="create" name="invoice" height='250' >
+ 
             <h2>Create your own Invoice</h2>
             <div class="form-group">
               <label for="firstName">FirstName</label>
@@ -54,19 +57,21 @@
               <label for="Quantity">LastName</label>
               <input type="text" class="form-control" name="Quantity" placeholder="Quantity">
             </div>
-            
-            
+
               <label>
                 Please make sure your input correct information!
               </label>
             {{!-- <input id="submit" type="submit" class="btn btn-lg btn-success" value="Submit"> --}}
             <input id="submit" type="submit" class="btn btn-lg btn-primary" value="Edit">
             <input id="submit" type="submit" class="btn btn-lg btn-warning" value="Cancel">
-        </form>
-      <hr />
+        
+             </div>   
+      </div>
+</div>
+    
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
-    </div>    
+       
   </body>
 </html>
