--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -9,6 +9,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/stickyfooter.css" rel="stylesheet">
     {{!-- <link href="/assets/css/jumbotron-narrow.css" rel="stylesheet" type="text/css"> --}}
   </head>
   <body>
@@ -24,13 +26,13 @@
             <li role="presentation"><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
 
-      <div class="jumbotron">
-        <h1 class="text-center">Welcome to Dime Platform</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      </div>
+   <!--   <div class="jumbotron">
+        <h1 class="text-center">Welcome to Dime</h1>
+        <p class="lead"></p>
+      </div> -->
 
       <div class="container">
           <div class="row">
