--- a/views/order.hbs
+++ b/views/order.hbs
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dime</title>
     <!-- Bootstrap core CSS -->
+    <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/stickyfooter.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link rel="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
+   <!-- <link rel="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
+
   </head>
   <body>
     <div class="container">
@@ -24,16 +27,18 @@
             <li role="presentation"><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
 
-      <div class="jumbotron">
-        <h1 class="text-center">Welcome to Dime Platform</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      </div>
+     <!-- <div class="jumbotron">
+        <h1 class="text-center">Welcome to Dime</h1>
+        <p class="lead"></p>
+      </div> -->
 
-      <div class="container">
-          <form id="create" name="invoice" height='250'>
+<div class="container">
+ 
+        <div id="card" class="card-body" id="create" name="invoice">
+         <!-- <form id="create" name="invoice">-->
             <h2>Make your Order</h2>
             <div class="form-group">
               <label for="inputName">Name</label>
@@ -113,27 +118,34 @@
               <label for="inputEmail">Email</label>
               <input type="email" class="form-control" id="inputEmail" placeholder="Email">
             </div>
+            <br>
             <div id="coffeeForm" class="input-group mb-10">
-
               </div>
+              <br>
               <button id="addLineItem" class="btn btn-primary" type="button">Add Another Item</button>
+              <br>
               <br>
               <label>
                 Please make sure your input correct information!
-              </label><br>
+              </label>
+              <br>
+              <br>
             <button id="submit" type="button" class="btn btn-lg btn-success">Submit</button>
             {{!-- <input id="submit" type="submit" class="btn btn-lg btn-primary" value="Edit"> --}}
             {{!-- <input id="submit" type="submit" class="btn btn-lg btn-warning" value="Cancel"> --}}
         </form>
       </div>  
-        
-<hr/>
-      <footer class="footer">
+    </div>
+  </div>
+
+     <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
-    </div>
+
+  
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="/assets/js/apiCalls.js"></script>
       <script src="/assets/js/order.js"></script>    
+
   </body>
 </html>
