--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -27,8 +27,8 @@
       </div>
 
       <div class="jumbotron">
-        <h1 class="text-center">Welcome to Dime Platform</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <h1 class="text-center">Welcome to Dime</h1>
+        <p class="lead"></p>
       </div>
 
         <form id="signup" name="signup" method="post" action="/signup" height='350'>
