--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13,6 +13,12 @@
   text-decoration: none;
   
 }
+.invisible{
+  visibility: hidden;
+}
+.visible{
+  visibility: visible;
+}
 
 .box {
   width: 100%;
