--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -32,27 +32,93 @@
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div>
 
-        <form id="create" name="invoice" height='250'>
-            <h2>Create your own Invoice</h2>
+        <div class="container">
+          <label for="searchFor">Invoice Id</label>
+          <input id="searchFor" type="text"><button id="submitSearch" type="button" class="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+
+          <form id="create" class="invisible" name="invoice"  height='250' >
+            <h2></h2>
             <div class="form-group">
-              <label for="firstName">FirstName</label>
-              <input type="text" class="form-control" name="firstname" placeholder="First Name">
+              <label for="inputName">Name</label>
+              <input type="text" class="form-control" id="inputName" placeholder="Name">
             </div>
             <div class="form-group">
               <label for="address">Your address</label>
-              <input type="text" class="form-control" name="address" placeholder="Address">
+              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
             </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity">City</label>
+                    <input type="text" class="form-control" id="inputCity" name="order" placeholder="City">
+                </div>
+                  <div class="form-group col-md-4">
+                    <label for="inputState">State</label>
+
+                    <select class="form-control" id="inputState">
+                      <option value="AL">AL</option>
+                      <option value="AK">AK</option>
+                      <option value="AR">AR</option>	
+                      <option value="AZ">AZ</option>
+                      <option value="CA">CA</option>
+                      <option value="CO">CO</option>
+                      <option value="CT">CT</option>
+                      <option value="DC">DC</option>
+                      <option value="DE">DE</option>
+                      <option value="FL">FL</option>
+                      <option value="GA">GA</option>
+                      <option value="HI">HI</option>
+                      <option value="IA">IA</option>	
+                      <option value="ID">ID</option>
+                      <option value="IL">IL</option>
+                      <option value="IN">IN</option>
+                      <option value="KS">KS</option>
+                      <option value="KY">KY</option>
+                      <option value="LA">LA</option>
+                      <option value="MA">MA</option>
+                      <option value="MD">MD</option>
+                      <option value="ME">ME</option>
+                      <option value="MI">MI</option>
+                      <option value="MN">MN</option>
+                      <option value="MO">MO</option>	
+                      <option value="MS">MS</option>
+                      <option value="MT">MT</option>
+                      <option value="NC">NC</option>	
+                      <option value="NE">NE</option>
+                      <option value="NH">NH</option>
+                      <option value="NJ">NJ</option>
+                      <option value="NM">NM</option>			
+                      <option value="NV">NV</option>
+                      <option value="NY">NY</option>
+                      <option value="ND">ND</option>
+                      <option value="OH">OH</option>
+                      <option value="OK">OK</option>
+                      <option value="OR">OR</option>
+                      <option value="PA">PA</option>
+                      <option value="RI">RI</option>
+                      <option value="SC">SC</option>
+                      <option value="SD">SD</option>
+                      <option value="TN">TN</option>
+                      <option value="TX">TX</option>
+                      <option value="UT">UT</option>
+                      <option value="VT">VT</option>
+                      <option value="VA">VA</option>
+                      <option value="WA">WA</option>
+                      <option value="WI">WI</option>	
+                      <option value="WV">WV</option>
+                      <option value="WY">WY</option>
+                  </select>
+                  </div>
+            <div class="form-group col-md-2">
+                    <label for="inputZip">Zipcode</label>
+                    <input type="text" class="form-control" id="inputZip" name="order" placeholder="Zip">
+                  </div>
             <div class="form-group">
-              <label for="email">Email</label>
-              <input type="password" class="form-control" name="email" placeholder="Email">
+              <label for="inputEmail">Email</label>
+              <input type="email" class="form-control" id="inputEmail" placeholder="Email">
             </div>
-            <div class="form-group">
-              <label for="ProductId">ProductID</label>
-              <input type="text" class="form-control" name="ProductId" placeholder="ProductID">
+            <div id="coffeeForm" class="input-group mb-10">
+
             </div>
-            <div class="form-group">
-              <label for="Quantity">LastName</label>
-              <input type="text" class="form-control" name="Quantity" placeholder="Quantity">
             </div>
             
             
@@ -60,13 +126,18 @@
                 Please make sure your input correct information!
               </label>
             {{!-- <input id="submit" type="submit" class="btn btn-lg btn-success" value="Submit"> --}}
-            <input id="submit" type="submit" class="btn btn-lg btn-primary" value="Edit">
-            <input id="submit" type="submit" class="btn btn-lg btn-warning" value="Cancel">
+            <button id="submit" type="button" class="btn btn-lg btn-primary">Edit</button>
+            <button id="cancel" type="button" class="btn btn-lg btn-danger" > Cancel Order</button>
         </form>
+       
       <hr />
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
-    </div>    
+    </div>
+      <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      <script src="/assets/js/apiCalls.js"></script>
+      <script src="/assets/js/invoice.js"></script>      
   </body>
 </html>
