--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -15,8 +15,8 @@
   <!--  <link href="../public/assets/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
   </head>
   <body>
-    <div class="container">
-      <div class="header clearfix">
+  <header id="masthead">
+      <div class="header clearfix" id="box">
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" class="disabled" ><a href="/dashboard">About</a></li>
@@ -29,7 +29,9 @@
         </nav>
         <h2 class="text-muted">Dime</h2>
       </div>
+  </header>
 
+    <div class="container">
       <div class="jumbotron">
         <h1 class="text-center">Welcome to Dime</h1>
         <p class="lead">Dime is an easy to use business process model that helps a company manage orders, invoices, products and track data. With its easy to use features Dime is a powerful tool for any type of company. Dime makes is fast an easy for you to run your business and gives you the freedom to run it how you would like</p>
