--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -14,20 +14,21 @@
   <!--  <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
   </head>
   <body>
-    <div class="container">
-      <div class="header clearfix">
+  <header id="masthead">
+      <div class="header clearfix" id="box">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/dashboard">About</a></li>
+            <li role="presentation" class="disabled" ><a href="/dashboard">About</a></li>
             <li role="presentation" ><a href="/order">Order</a></li>
-            <li role="presentation" class="disabled" ><a href="/invoice">Invoice</a></li>
+            <li role="presentation" ><a href="/invoice">Invoice</a></li>
             <li role="presentation" ><a href="/manager">Manager</a></li>
             <li role="presentation" ><a href="/charts">Statistics</a></li>
-            <li role="presentation"><a href="/signin">Logout</a></li>
+            <li role="presentation" ><a href="/signin">Logout</a></li>
           </ul>
         </nav>
         <h2 class="text-muted">Dime</h2>
       </div>
+  </header>
 
   {{!-- <div class="jumbotron">
         <h1 class="text-center">Welcome to Dime Platform</h1>
