--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -24,7 +24,7 @@
   background: rgba(255,0,0,0.5) !important;
 }
 
-.box {
+#box {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
@@ -65,9 +65,9 @@ nav a:first-child {
   border-left: 0 none;
 }
 
-html, body {
+/*html, body {
   height: 100%;
-}
+} */
 
 body { 
 background-image: url("https://www.pixeden.com/media/k2/galleries/112/002-subtle-light-pattern-background-texture.jpg");
@@ -101,22 +101,23 @@ color: black;
 .main {
 
   width: 75%;
- /* height: 75%;*/
+  height: 75%;
   border: 2px, solid black;
   padding: 100px;
 }
 
-/*.footer {
-  position: relative;
-  padding: 25px 0;
-  background: #698a8a;
-  color: #fff;
-  height: 100px;
-  clear: both;
-  text-align: center;
-  font-size: 15px;
-  opacity: 0.75; 
-}*/
+  .footer {
+    position: absolute;
+    padding: 25px 0;
+    background: #698a8a;
+    color: #fff;
+    height: 60px;
+    text-align: center;
+    font-size: 15px;
+    opacity: 0.75; 
+    bottom: 0;
+    width: 100%;
+}
 
 /* Dashboard */
 .jumbotron {
@@ -126,8 +127,8 @@ color: black;
 
 #category {
   color: #313d3d;
+  margin-bottom: 215px;
 }
-
 
 
 /* order */
@@ -156,7 +157,7 @@ color: black;
   text-align: none;
   background-color: #698a8a;
   margin-top: 75px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   color: white;
 }
 
@@ -179,7 +180,7 @@ color: black;
   width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin: 100px 30px 300px 35px;
+  margin: 100px 30px 100px 35px;
   clear: left;
   float: left;
   background: #698a8a;
@@ -192,7 +193,7 @@ color: black;
   width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin: 100px 35px 300px 50px;
+  margin: 100px 35px 100px 50px;
   float: right;
   clear: right;
   background: #698a8a;
@@ -200,13 +201,13 @@ color: black;
 }
 
 #prevProd {
-  margin-right: 5px;
+  margin-right: 0px;
   background-color: white;
   color: #698a8a;
 }
 
 #nextProd {
-  margin-left: 5px;
+  margin-left: 0px;
   color: #698a8a;
 }
 
@@ -227,5 +228,5 @@ color: black;
 #charts {
   width: 1200px;
   background-color: white;
-  margin-top: 30px;
+  margin-top: 0px;
 }
