--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -14,20 +14,21 @@
     {{!-- <link href="/assets/css/jumbotron-narrow.css" rel="stylesheet" type="text/css"> --}}
   </head>
   <body>
-    <div class="container">
-      <div class="header clearfix">
+  <header id="masthead">
+      <div class="header clearfix" id="box">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/dashboard">About</a></li>
+            <li role="presentation" class="disabled" ><a href="/dashboard">About</a></li>
             <li role="presentation" ><a href="/order">Order</a></li>
             <li role="presentation" ><a href="/invoice">Invoice</a></li>
-            <li role="presentation" class="disabled"><a href="/manager">Manager</a></li>
+            <li role="presentation" ><a href="/manager">Manager</a></li>
             <li role="presentation" ><a href="/charts">Statistics</a></li>
-            <li role="presentation"><a href="/signin">Logout</a></li>
+            <li role="presentation" ><a href="/signin">Logout</a></li>
           </ul>
         </nav>
         <h2 class="text-muted">Dime</h2>
       </div>
+  </header>
 
    <!--   <div class="jumbotron">
         <h1 class="text-center">Welcome to Dime</h1>
@@ -57,16 +58,15 @@
 
               <div class="col-lg-6">
                   <form id="UpdateProduct" height='250' data-product-id=1>
-                    <h2><button id="prevProd" class="btn disabled" type="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
-                    Update Current Product
-                    <button id="searchProd" type="button" class = "btn"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                    <button id="nextProd" type="button" class="btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button></h2>
+                  <h2><button id="prevProd" class="btn disabled" type="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+                    Update Current Product</h2><button id="nextProd" type="button" class="btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+                     <!--   <button id="searchProd" type="button" class = "btn"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
                     <div class="form-group">
-                        <label for="productUpdateName" class="sc-only">ProductName</label>
+                        <label for="productUpdateName" class="sc-only">Product Name</label>
                         <input type="text" class="form-control" id="productUpdateName" placeholder="Product Name">
                     </div>
                     <div class="form-group">
-                        <label for="productUpdatePrice">UnitPrice</label>
+                        <label for="productUpdatePrice">Unit Price</label>
                         <input type="text" class="form-control" id="productUpdatePrice" placeholder="Unit Price">
                     </div>
                     <div class="form-group">
@@ -79,11 +79,11 @@
           </div>
       </div>  
     <hr />
-    <div class="modal fade" id="myModal" role="dialog">
+ <!--   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
     
       <!-- Modal content-->
-      <div class="modal-content">
+  <!--    <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">Search by Product Id</h4>
@@ -98,14 +98,14 @@
         </div>
       </div>
       <!--End of Modal content-->
-          
-    <div class="container">
+     <!--   </div>
+    
+</div> -->
+  <!--  <div class="container"> -->
         <footer class="footer">
             <p>&copy; 2018 DIME Company, Inc.</p>
         </footer>
-    </div>
-    
-</div>
+   
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="/assets/js/apiCalls.js"></script>
