--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -119,6 +119,13 @@ color: black;
     width: 100%;
 }
 
+/* Sign In */
+
+#signinpage {
+  background-color: #cad6d6;
+}
+
+
 /* Dashboard */
 .jumbotron {
   text-align: center;
@@ -155,10 +162,11 @@ color: black;
   border: 2px solid black;
   padding: 25px;
   text-align: none;
-  background-color: #698a8a;
+/*  background: #698a8a; */
+  background-color: #cad6d6;
   margin-top: 75px;
   margin-bottom: 50px;
-  color: white;
+  color: black;
 }
 
 .input-group-append {
@@ -183,8 +191,11 @@ color: black;
   margin: 100px 30px 100px 35px;
   clear: left;
   float: left;
-  background: #698a8a;
-  color: white;
+/*  background: #698a8a; */
+  background-color: #cad6d6;
+/*  color: white; */
+  color: black;
+
  
 
 }
@@ -196,8 +207,10 @@ color: black;
   margin: 100px 35px 100px 50px;
   float: right;
   clear: right;
-  background: #698a8a;
-  color: white;
+/*  background: #698a8a;*/
+  background-color: #cad6d6;
+ /* color: white; */
+ color: black;
 }
 
 #prevProd {
@@ -208,6 +221,7 @@ color: black;
 
 #nextProd {
   margin-left: 0px;
+  background-color: white;
   color: #698a8a;
 }
 
