--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -3,24 +3,32 @@
 <head>
 	<title>SIGNIN</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="assets/css/styles.css" rel="stylesheet" type="text/css">
   <link href="../public/assets/css/stickyfooter.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-<div class="container">
-  <div class="header clearfix">
+  <header id="masthead">
+      <div class="header clearfix" id="box">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="disabled"><a href="#">Order</a></li>
-            <li role="presentation" class="disabled"><a href="#">Invoice</a></li>
-            <li role="presentation" class="disabled"><a href="#">Manager</a></li>
-            <li role="presentation" class="disabled"><a href="#">Statistics</a></li>
-            <li role="presentation"><a href="/signup">SignUp</a></li>
+            <li role="presentation" class="disabled" ><a href="/dashboard">About</a></li>
+            <li role="presentation" ><a href="/order">Order</a></li>
+            <li role="presentation" ><a href="/invoice">Invoice</a></li>
+            <li role="presentation" ><a href="/manager">Manager</a></li>
+            <li role="presentation" ><a href="/charts">Statistics</a></li>
+            <li role="presentation" ><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-      <h3 class="text-muted">Dime</h3>
-  </div>  
-    <div class="jumbotron text-center">
+        <h2 class="text-muted">Dime</h2>
+      </div>
+  </header>
+<br>
+<br>
+<br>
+<br>
+  <div class="container">
+    <div class="jumbotron text-center" id="signinpage">
       <div class="container">
         <h2>Welcome to Dime</h2>
       <hr />
@@ -54,12 +62,12 @@
             </div>
     </form>
   </div>
-  <hr />
-<div class="container">
-  <span class="text-muted">&copy; 2018 DIME Company, Inc.</span>
-</div>      
 </div>
 </div> 
+  <hr />
+      <footer class="footer">
+        <p>&copy; 2018 DIME Company, Inc.</p>
+      </footer>     
 
 </body>
 </html>
