sign up and font

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -9,10 +9,10 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
    <link href="assets/css/styles.css" rel="stylesheet">
    <link href="assets/css/stickyfooter.css" rel="stylesheet">
-    <link rel="../assets/css/styles.css" rel="stylesheet" type="text/css">
-  <!--  <link href="../public/assets/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
+
   </head>
   <body>
   <header id="masthead">
@@ -43,23 +43,23 @@
       <div class="row marketing">
         <div class="col-lg-3" id="category">
           <h4>Orders</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <p>Create an order.</p>
 
         </div>
 		<div class="col-lg-3">
           <h4>Invoice</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <p>Look up and keep track of invoices</p>
 
         </div>
 		<div class="col-lg-3">
           <h4>Manager</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <p>Create new products and edit existing ones.</p>
 
         </div>
 
         <div class="col-lg-3">
           <h4>Charts</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <p>Keep track of what is product data.</p>
 
         </div>
       </div>
