--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -9,9 +9,10 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href="assets/css/stickyfooter.css" rel="stylesheet">
-  <!--  <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
+
   </head>
   <body>
   <header id="masthead">
@@ -134,12 +135,13 @@
             <button id="submit" type="button" class="btn btn-lg btn-primary">Edit</button>
             <button id="cancel" type="button" class="btn btn-lg btn-danger" > Cancel Order</button>
         </form>
-       
+      </div>
       <hr />
+      
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
-    </div>
+    
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="/assets/js/apiCalls.js"></script>
