--- a/views/order.hbs
+++ b/views/order.hbs
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dime</title>
     <!-- Bootstrap core CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
     <link href="assets/css/stickyfooter.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-   <!-- <link rel="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">-->
+  
+
 
   </head>
   <body>
@@ -126,7 +127,7 @@
               <br>
               <br>
               <label>
-                Please make sure your input correct information!
+               Please make sure your input correct information!
               </label>
               <br>
               <br>
