--- a/public/assets/css/stickyfooter.css
+++ b/public/assets/css/stickyfooter.css
@@ -4,7 +4,7 @@
   /*  position: absolute;*/
     padding: 25px 0;
     background: #698a8a;
-    color: #fff;
+    color: black;
     height: 60px;
     text-align: center;
     font-size: 15px;
