--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -5,7 +5,7 @@
 /*  background: #b5bebe; */
   opacity: 0.90; 
   float: left;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+ /* font-family: Georgia, 'Times New Roman', Times, serif;*/
   text-align: center;
   line-height: 90px;
   color: #666; 
@@ -65,9 +65,7 @@ nav a:first-child {
   border-left: 0 none;
 }
 
-/*html, body {
-  height: 100%;
-} */
+
 
 body { 
 background-image: url("https://www.pixeden.com/media/k2/galleries/112/002-subtle-light-pattern-background-texture.jpg");
@@ -75,29 +73,16 @@ background-position: center;
 background-repeat:  no-repeat;
 background-attachment: fixed;
 background-size:  cover;
+font-family: 'Nanum Gothic', sans-serif;
 }
 
 
 div, body{
 margin: 0;
 padding: 0;
-font-family: exo, sans-serif;
+/*font-family: exo, sans-serif;*/
 color: black;
 }
-
-#info {
-
-  width: 75%;
-  height: 40%;
-  border: 2px, black;
-}
-
-#example {
-  width: 75%;
-  height: 50%;
-  border: 2px, black;
-}
-
 .main {
 
   width: 75%;
@@ -106,22 +91,27 @@ color: black;
   padding: 100px;
 }
 
-  .footer {
+p, label {
+  font-size: 16px;
+}
+
+
+/*  .footer {
     position: absolute;
     padding: 25px 0;
     background: #698a8a;
-    color: #fff;
+    color: black;
     height: 60px;
     text-align: center;
     font-size: 15px;
     opacity: 0.75; 
     bottom: 0;
     width: 100%;
-}
+} */
 
 /* Sign In */
 
-#signinpage {
+.jumbotron {
   background-color: #cad6d6;
 }
 
@@ -134,7 +124,7 @@ color: black;
 
 #category {
   color: #313d3d;
-  margin-bottom: 215px;
+  margin-bottom: 180px;
 }
 
 
@@ -164,6 +154,7 @@ color: black;
   text-align: none;
 /*  background: #698a8a; */
   background-color: #cad6d6;
+  font-family: 'Nanum Gothic', sans-serif;
   margin-top: 75px;
   margin-bottom: 50px;
   color: black;
