--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -9,27 +9,34 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
+   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+   <link href="assets/css/styles.css" rel="stylesheet">
+   <link href="assets/css/stickyfooter.css" rel="stylesheet">
+   <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
-    <div class="container">
-      <div class="header clearfix">
+  <header id="masthead">
+      <div class="header clearfix" id="box">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="disabled"><a href="#">Order</a></li>
-            <li role="presentation" class="disabled"><a href="#">Invoice</a></li>
-            <li role="presentation" class="disabled"><a href="#">Manager</a></li>
-            <li role="presentation" class="disabled"><a href="#">Statistics</a></li>
-            <li role="presentation"><a href="/signin">SignIn</a></li>
+            <li role="presentation" class="disabled" ><a href="/dashboard">About</a></li>
+            <li role="presentation" ><a href="/order">Order</a></li>
+            <li role="presentation" ><a href="/invoice">Invoice</a></li>
+            <li role="presentation" ><a href="/manager">Manager</a></li>
+            <li role="presentation" ><a href="/charts">Statistics</a></li>
+            <li role="presentation" ><a href="/signin">Logout</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">Dime</h3>
+        <h2 class="text-muted">Dime</h2>
       </div>
+  </header>
 
-      <div class="jumbotron">
-        <h1 class="text-center">Welcome to Dime</h1>
-        <p class="lead"></p>
-      </div>
+      <div class="container">
+        <div class="jumbotron">
+          <h1 class="text-center">Welcome to Dime</h1>
+            <p class="lead"></p>
+        </div>
 
         <form id="signup" name="signup" method="post" action="/signup" height='350'>
             <div class="form-group">
@@ -56,12 +63,13 @@
             </div>
             <input id="submit" type="submit" class="btn btn-lg btn-success" value="Sign Up">
         </form>
+      </div>  
   <hr />
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
 
-    </div>    
+    
   </body>
 </html>
 
