--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -59,8 +59,8 @@
 
               <div class="col-lg-6">
                   <form id="UpdateProduct" height='250' data-product-id=1>
-                  <h2><button id="prevProd" class="btn disabled" type="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
-                    Update Current Product</h2><button id="nextProd" type="button" class="btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+                  <h2><button id="prevProd" class="btn disabled" type="button" class="btn"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></button>
+                    Update Current Product<button id="nextProd" type="button" class="btn"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button></h2>
                      <!--   <button id="searchProd" type="button" class = "btn"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button> -->
                     <div class="form-group">
                         <label for="productUpdateName" class="sc-only">Product Name</label>
