--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -31,14 +31,18 @@
         <h2 class="text-muted">Dime</h2>
       </div>
   </header>
+<br>
+<br>
+<br>
+<br>
 
       <div class="container">
         <div class="jumbotron">
           <h1 class="text-center">Welcome to Dime</h1>
-            <p class="lead"></p>
+          <hr color="white" align="center">
         </div>
 
-        <form id="signup" name="signup" method="post" action="/signup" height='350'>
+        <form id="signup" class="form" name="signup" method="post" action="/signup" height='350'>
             <div class="form-group">
               <label for="email">Email address</label>
               <input type="email" class="form-control" name="email" placeholder="Email">
@@ -64,7 +68,7 @@
             <input id="submit" type="submit" class="btn btn-lg btn-success" value="Sign Up">
         </form>
       </div>  
-  <hr />
+  <hr>
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
