--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -109,10 +109,17 @@ p, label {
     width: 100%;
 } */
 
+/* sign up */
+
+.form {
+  margin-top: 50px;
+}
+
 /* Sign In */
 
 .jumbotron {
   background-color: #cad6d6;
+  margin-bottom: 145px;
 }
 
 
@@ -180,7 +187,7 @@ p, label {
   width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin: 100px 30px 100px 35px;
+  margin: 100px 30px 115px 35px;
   clear: left;
   float: left;
 /*  background: #698a8a; */
@@ -196,7 +203,7 @@ p, label {
   width: 500px;
   border: 2px solid black;
   padding: 25px;
-  margin: 100px 35px 100px 50px;
+  margin: 100px 35px 115px 50px;
   float: right;
   clear: right;
 /*  background: #698a8a;*/
