--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -12,7 +12,6 @@
    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
    <link href="assets/css/styles.css" rel="stylesheet">
    <link href="assets/css/stickyfooter.css" rel="stylesheet">
-   <link href="../public/css/jumbotron-narrow.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -39,9 +38,8 @@
       <div class="container">
         <div class="jumbotron">
           <h1 class="text-center">Welcome to Dime</h1>
-          <hr color="white" align="center">
+          <hr class="hr">
         </div>
-
         <form id="signup" class="form" name="signup" method="post" action="/signup" height='350'>
             <div class="form-group">
               <label for="email">Email address</label>
@@ -68,7 +66,7 @@
             <input id="submit" type="submit" class="btn btn-lg btn-success" value="Sign Up">
         </form>
       </div>  
-  <hr>
+  <hr />
       <footer class="footer">
         <p>&copy; 2018 DIME Company, Inc.</p>
       </footer>
