--- a/public/assets/css/stickyfooter.css
+++ b/public/assets/css/stickyfooter.css
@@ -2,14 +2,14 @@
   .footer {
     position: relative;
   /*  position: absolute;*/
-    padding: 25px 0;
+ /*   padding: 25px 0;
     background: #698a8a;
     color: black;
-    height: 60px;
+    height: 60px;*/
     text-align: center;
-    font-size: 15px;
+/*    font-size: 15px;
     opacity: 0.75;
-    width: 100%;
+ /*   width: 100%;
     /* Set the fixed height of the footer here */
   /*  height: 60px;*/
 
