--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -43,12 +43,12 @@
       <div class="row marketing">
         <div class="col-lg-3" id="category">
           <h4>Orders</h4>
-          <p>Create an order.</p>
+          <p>Create and submit an order.</p>
 
         </div>
 		<div class="col-lg-3">
           <h4>Invoice</h4>
-          <p>Look up and keep track of invoices</p>
+          <p>Look up and keep track of invoices with ease.</p>
 
         </div>
 		<div class="col-lg-3">
