--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -36,12 +36,16 @@
 
         <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div> --}}
-
-        <div class="container">
+<br>
+<br>
+<br>
+<br>
+<br>
+        <div class="container" id="card">
           <label for="searchFor">Invoice Id</label>
           <input id="searchFor" type="text"><button id="submitSearch" type="button" class="btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
 
-    <div id="card" class="card-body invisible" id="create" name="invoice" height='250' >
+ <!--   <div id="card" class="card-body invisible" id="create" name="invoice" height='250' >-->
  
 
             <div class="form-group">
@@ -137,16 +141,17 @@
         </form>
       </div>
       <hr />
-      
-      <footer class="footer">
-        <p>&copy; 2018 DIME Company, Inc.</p>
-      </footer>
+
+
     
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
       <script src="/assets/js/apiCalls.js"></script>
       <script src="/assets/js/invoice.js"></script>
 
+      <footer class="footer">
+        <p>&copy; 2018 DIME Company, Inc.</p>
+      </footer>
            
   </body>
 </html>
