--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -246,10 +246,11 @@ p, label {
   border-radius: 5px;
 }
 
-#searchProd {
+/*#searchProd {
   margin-left: 10px;
   background-color: white;
-}
+} */
+
 /*charts */
 
 #charts {
