--- a/views/manager.hbs
+++ b/views/manager.hbs
@@ -75,7 +75,7 @@
                     <input type="text" class="form-control" id="productUpdateStock" placeholder="Stock QUantity">
                     </div>
                     <button id="submitUpdate" type="button" class="btn btn-lg btn-primary">Edit</button>
-                    <button id="searchProd" type="button" class = "btn"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>  Search Product</button>
+                    <button id="searchProd" type="button" class = "btn btn-lg btn-primary"  data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>  Search Product</button>
                 </form>
               </div>
           </div>
